# lbfgs-FFNN

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  config.yaml  test_mnist_unified
docs/: annotated.html  bfgs_8hpp.html  bfgs_8hpp__incl.map  bfgs_8hpp__incl.md5  bfgs_8hpp_source.html  classBFGS-members.html  classBFGS.html  classBFGS__coll__graph.map  classBFGS__inherit__graph.md5  classBFGS_a037d353ea150ef231720075d5decfd44_cgraph.map  classBFGS_a037d353ea150ef231720075d5decfd44_cgraph.md5  classDenseLayer-members.html  classDenseLayer.html  classDenseLayer__coll__graph.map  classDenseLayer__inherit__graph.md5  classGradientDescent-members.html  classGradientDescent.html  classGradientDescent__inherit__graph.map  classGradientDescent__inherit__graph.md5  classGradientDescent_abe059759db9680e1ddda671bda85475e_cgraph.map  classGradientDescent_abe059759db9680e1ddda671bda85475e_cgraph.md5  classLBFGS-members.html  classLBFGS.html  classLBFGS__coll__graph.map  classLBFGS__coll__graph.md5  classLBFGS_acc3c0cb169d832d01fe8f9ef512e8d70_cgraph.map  classLBFGS_acc3c0cb169d832d01fe8f9ef512e8d70_cgraph.md5  classLayer-members.html  classLayer.html  classLayer__inherit__graph.map  classLayer__inherit__graph.md5  classMinimizerBase-members.html  classMinimizerBase.html  classMinimizerBase__inherit__graph.map  classMinimizerBase__inherit__graph.md5  classMinimizerBase_a059d61e7f4932542f807789982ac1bdf_icgraph.map  classMinimizerBase_a059d61e7f4932542f807789982ac1bdf_icgraph.md5  classMinimizerBase_a153c472a659e6265c6e83514dcd55ed2_cgraph.map  classMinimizerBase_a153c472a659e6265c6e83514dcd55ed2_cgraph.md5  classMinimizerBase_a5f0784418ca42c383ce1f471b7569e99_icgraph.map  (+422 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  (+66 more)
enviroment/: Dockerfile  README.md
environment/: Dockerfile
lib/autodiff/: Makefile  autodiffConfig.cmake  cmake_install.cmake
lib/autodiff/autodiff/: Makefile  cmake_install.cmake
lib/autodiff/autodiff/common/: eigen.hpp
lib/autodiff/autodiff/reverse/var/: var.hpp
lib/autodiff/docs/: Makefile  cmake_install.cmake
scripts/: plot_results.py
scripts/cpu_fashion_784_128_10_s5000/: FASHION_LBFGS_m10_history.csv  FASHION_LBFGS_m20_history.csv  FASHION_MNIST_GD_history.csv  FASHION_MNIST_SGD_history.csv  FASHION_MNIST_SLBFGS_history.csv
scripts/cpu_mnist_784_128_10_s1000/: MNIST_LBFGS_history.csv  MNIST_SGD_history.csv  MNIST_SLBFGS_history.csv  MNIST_Unified_GD_history.csv
scripts/gpu_deep_fashion_784_128_64_10_s1000/: FASHION_LBFGS_m100_history.csv  FASHION_MNIST_LBFGS_m10_history.csv  FASHION_MNIST_SGD_history.csv  FASHION_MNIST_Unified_GD_history.csv
scripts/gpu_fashion_784_128_10_s1000/: FASHION_LBFGS_m100_history.csv  FASHION_MNIST_LBFGS_m10_history.csv  FASHION_MNIST_SGD_history.csv  FASHION_MNIST_Unified_GD_history.csv
scripts/gpu_mnist_784_128_10_s1000/: MNIST_GD_history.csv  MNIST_LBFGS_m100_history.csv  MNIST_LBFGS_m10_history.csv  MNIST_SGD_history.csv
src/: bfgs.hpp  common.hpp  gd.hpp  iteration_recorder.hpp  launcher_unified.hpp  layer.hpp  layer_pinn.hpp  lbfgs.hpp  main.cpp  minimizer_base.hpp  network.hpp  network_pinn.hpp  network_wrapper.hpp  newton.hpp  s_gd.hpp  s_lbfgs.hpp  s_lbfgs_parallel.hpp  seed.hpp  simple_config.hpp  trial_stochastic.cpp  unified_launcher.hpp  unified_optimization.hpp
src/cuda/: common.cuh  cublas_handle.cuh  device_buffer.cuh  gd.cuh  iteration_recorder.cuh  kernels.cuh  layer.cuh  lbfgs.cuh  minimizer_base.cuh  network.cuh  optimizer.cuh  optimizer_base.cuh  optimizer_lbfgs.cuh  optimizer_sgd.cuh  sgd.cuh
src/enzyme/: pinn_network.hpp  pinn_network_batch.hpp  pinn_network_cuda.cuh  pinn_network_eigen.hpp
src/minimizer/: bfgs.hpp  full_batch_minimizer.hpp  gd.hpp  lbfgs.hpp  minimizer_base.hpp  newton.hpp  ring_buffer.hpp  s_gd.hpp  s_lbfgs.hpp  stochastic_minimizer.hpp
tests/: autodiff_tests.cpp  cuda_report.hpp  enzyme_test.cpp  enzyme_test2.cpp  main.cpp  test.hpp  test_enzyme.c  test_sgd_batch.cpp  unified_test.cpp
tests/burgers/: CMakeLists.txt  test_burgers.cpp  test_burgers_parallel.cpp  visual.py
tests/cuda/: fashion.cu  launcher.hpp  mnist.cu  pinn_burgers.cu  synthetic.cu
tests/fashion/: main.cpp
tests/fashion-mnist/: main-cpu.cpp  main-gpu.cpp  main_cuda.cu  main_gpu_deep.cpp
tests/mnist/: main-cpu.cpp  main-gpu.cpp  main.cpp  main2.cpp  main_cuda.cu  mnist_loader.hpp  notes.txt  test_minst.py
tests/pin/: pin_main.cpp
tests/pytorch/: autoencoder_pytorch.py  benchmark_pytorch.py
tests/rand/: bin_loader.hpp  data_generator.py  main_cuda.cu
